--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -115,7 +115,7 @@ contact_links = [
   {icon = "phone", icon_pack = "fas", name = "Telephone", link = "tel:+441157722132"},
   {icon = "mobile", icon_pack = "fas", name = "Mobile", link = "tel:+447519821746"},
   {icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/TherapyNotts"},
-  {icon = "commenting", icon_pack = "fas", name = "Signal me", link = "https://signal.org/download/"}
+  {icon = "comment-dots", icon_pack = "fas", name = "Signal me", link = "https://signal.org/download/"}
   ]
 
 ############################
