--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -112,8 +112,8 @@ appointment_url = "https://therapy-nottingham.selectandbook.com/"
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links = [
-  {icon = "phone", icon_pack = "fas", name = "Telephone", link = "tel:+441157722132"},
-  {icon = "mobile", icon_pack = "fas", name = "Mobile", link = "tel:+447519821746"},
+  {icon = "phone", icon_pack = "fas", name = "Telephone: +44(0)115 7722132", link = "tel:+441157722132"},
+  {icon = "mobile", icon_pack = "fas", name = "Mobile: +44(0)7519 821 746", link = "tel:+447519821746"},
   {icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/TherapyNotts"},
   {icon = "comment-dots", icon_pack = "fas", name = "Signal me", link = "https://signal.org/download/"}
   ]
