--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -114,7 +114,7 @@ appointment_url = "https://therapy-nottingham.selectandbook.com/"
 contact_links = [
   {icon = "phone", icon_pack = "fas", name = "Telephone: +44(0)115 7722132", link = "tel:+441157722132"},
   {icon = "mobile", icon_pack = "fas", name = "Mobile: +44(0)7519 821 746", link = "tel:+447519821746"},
-  {icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/TherapyNotts"},
+  {icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/JustinClarkXYZ"},
   {icon = "comment-dots", icon_pack = "fas", name = "Signal me", link = "https://signal.org/download/"}
   ]
 
@@ -126,7 +126,7 @@ contact_links = [
 sharing_image = ""
 
 # Twitter username (without @). Used when a visitor shares your site on Twitter.
-twitter = "TherapyNotts"
+twitter = "JustinClarkXYZ"
 
 ############################
 ## Regional Settings
